position dropdown dots correctly, add color and z-index

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -17,5 +17,17 @@
         .UserCard-identity {
             font-size: 22px;
         }
+
+        .UserCard-controls {
+            // delete important rule once those rules in core files by flarum are removed
+            position: relative !important;
+            z-index: 999;
+        }
+
+        .Button {
+            @media @phone {
+                color: #fff !important;
+            }
+        }
     }
 }
